--- a/projekt/src/index.css
+++ b/projekt/src/index.css
@@ -50,31 +50,6 @@ ul.header li a {
   border:none;
   display:block;
   margin:auto;
-
-}
-
-.leftbox {
-  background-color:#111;
-  color:white;
-  height:auto;
-  width:250px;
-  margin-top:100px;
-  margin-left:300px;
-  text-align:center;
-  vertical-align:top;
-  opacity: 0.9;
-}
-
-.rightbox {
-  background-color:#111;
-  color:white;
-  height:auto;
-  width:250px;
-  margin-top:-120px;
-  margin-left: 900px;
-  text-align:center;
-  vertical-align:top;
-  opacity: 0.9;
 }
 
 .white {
@@ -87,40 +62,33 @@ ul.header li a {
 }
 
 .jumbotron {
-  padding:10px;
-  margin: 150px 500px;
   background-color:#111;
   opacity: 0.9;
-  color:#808080;
-}
-
-.columnleft {
-    float: left;
-    width: 25%;
-    padding: 10px;
-    height: 150px;
-    background-color:black;
-    opacity:0.9;
-    color:white;
-    text-align:center;
-    margin-left:400px;
-    color:black;
-}
-
-.columnright {
-    float: left;
-    width: 25%;
-    padding: 10px;
-    height: 150px;
-    background-color:black;
-    opacity:0.9;
-    color:white;
-    text-align:center;
-    color:black;
+  color:white;
 }
 
 .row:after {
     content: "";
     display: table;
     clear: both;
+}
+
+input[type="text"], input[type="date"], input[type="number"] {
+  font-size:100%;
+}
+
+.btn {
+  font-size:100%;
+}
+
+.custom {
+  width:200px;
+}
+
+.btn-warning {
+  background-color:#e6e600;
+}
+
+.btn-warning:hover {
+  background-color:#ffff00;
 }
