--- a/tarkvaratehnika/frontend/src/index.css
+++ b/tarkvaratehnika/frontend/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background: url("http://getwallpapers.com/wallpaper/full/8/a/d/298203.jpg") no-repeat center center fixed;
+  background: url("img/background.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -91,4 +91,21 @@ input[type="text"], input[type="date"], input[type="number"] {
 
 .btn-warning:hover {
   background-color:#ffff00;
+}
+
+.Panel.Body {
+  background-color: black;
+}
+
+.black {
+  color: black;
+}
+
+.button {
+  border-radius: 8px;
+  margin-right: 5px;
+}
+
+.bottomroom {
+  margin-bottom: 5px;
 }
